# modified:   .gitignore 	# modified:   LICENSE 	# modified:   README.md 	# modified:   _config.yml 	# modified:   _includes/experience.html 	# new file:   _includes/path/link_cert.html 	# new file:   _includes/path/link_honors.html 	# modified:   _sass/_style.scss 	# new file:   pdf.md 	# modified:   resume.pdf

--- a/_config.yml
+++ b/_config.yml
@@ -22,6 +22,6 @@ nav:
  - name: "cv"
    link: "/cv/"
  - name: "pdf"
-  #  link: "resume.pdf"
+   link: "resume.pdf"
  - name: "contacts"
    link: "contacts"
