--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: ariaf.my.id
-title_path: ariaf.my.id/cv
-url: "https://ariaf.my.id"
+title: rifat
+title_path: /cv
+url: "https://kakarotsec.github.io/cv"
 baseurl: "/cv"
 
 markdown: kramdown
